tests/cases/control-flow/ok/while-false-owner-state.ari
fn main() -> i64 {
  let token: own i64 = 5;
  while false {
    drop token;
  }
  drop token;
  return 0;
}
