tests/cases/control-flow/errors/loop-break-live-owner.ari
fn main() -> i64 {
  while true {
    let token: own i64 = 5;
    break;
  }
  return 0;
}
